# vexis

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
.sisyphus/: boulder.json
.sisyphus/notepads/attendance-implementation/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/dashboard-implementation/: learnings.md
.sisyphus/notepads/vexis-dashboard-update/: learnings.md
.sisyphus/plans/: attendance-implementation.md  dashboard-implementation.md  fix-attendance-checkout-bug.md  fix-dashboard-stats-bug.md
apps/absengo-api/: Cargo.toml  README.md
apps/absengo-api/src/: main.rs
apps/absengo-api/src/config/: db.rs
apps/absengo-api/src/handlers/: auth.rs
apps/absengo-api/src/models/: user.rs
apps/absengo-api/src/routes/: auth.rs
apps/absengo-api/src/utils/: mod.rs
apps/absengo-web/: README.md  index.html  package.json
apps/absengo-web/src/: App.tsx  index.css
apps/vexis-api/: Cargo.toml  README.md
apps/vexis-api/src/: main.rs
apps/vexis-api/src/handlers/: admin_attendance.rs  admin_user.rs  attendance.rs  auth.rs  dashboard.rs  mod.rs  user.rs
apps/vexis-api/src/middleware/: auth.rs  rbac.rs
apps/vexis-api/src/models/: attendance.rs  auth.rs  mod.rs  user.rs
apps/vexis-api/src/routes/: admin_attendance.rs  admin_user.rs  attendance.rs  auth.rs  dashboard.rs  mod.rs  user.rs
apps/vexis-api/src/utils/: email.rs  face.rs  geofence.rs  jwt.rs  mod.rs
apps/vexis-web/: README.md  index.html  package.json  vite.config.ts
apps/vexis-web/src/: App.css  App.tsx  index.css
apps/vexis-web/src/lib/: api.ts
(+18 files in other folders)
