[package]
name = "absengo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "3.1" }
dotenvy = "0.15"
jsonwebtoken = "9.3"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
